fix transformation in example code, issue #7

--- a/movinet_tutorial.ipynb
+++ b/movinet_tutorial.ipynb
@@ -616,7 +616,7 @@
         "\n",
         "hmdb51_train = torchvision.datasets.HMDB51('video_data/', 'test_train_splits/', num_frames,frame_rate=5,\n",
         "                                                step_between_clips = clip_steps, fold=1, train=True,\n",
-        "                                                transform=transform, num_workers=2)\n",
+        "                                                transform=transform_test, num_workers=2)\n",
         "\n",
         "\n",
         "hmdb51_test = torchvision.datasets.HMDB51('video_data/', 'test_train_splits/', num_frames,frame_rate=5,\n",
