fix: missing ! in pip install

--- a/movinet_tutorial.ipynb
+++ b/movinet_tutorial.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "!pip install av\n",
+    "! pip install av\n",
     "! wget https://raw.githubusercontent.com/pytorch/vision/6de158c473b83cf43344a0651d7c01128c7850e6/references/video_classification/transforms.py\n",
     "# Download HMDB51 data and splits from serre lab website\n",
     "! wget http://serre-lab.clps.brown.edu/wp-content/uploads/2013/10/hmdb51_org.rar\n",
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "pip install git+https://github.com/Atze00/MoViNet-pytorch.git\n"
+    "! pip install git+https://github.com/Atze00/MoViNet-pytorch.git\n"
    ]
   },
   {
